Update PetCareScheduler.java